--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-This repository contains the following publications:
+#My Quantum articles
+
+This repository contains publications authored by me, that pertain to Quantum technologies and Quantum concepts, that might help readers learn about various topics within the Quantum field.
+Current publications include:
 
 1) Qubits vs Bits: Published within Quantum Universal Education, as a part of my contributions to UnNIHACK22
    https://fullstackquantumcomputation.tech/blog/qubits-vs-bits/
